# BacktestAgent

./: .env_example  .gitignore  AGENTS.md  README.md  REFACTOR_SUMMARY.md  backtest_subgraph.mermaid  config.py  generate_mermaid.py  main.py  main_graph.mermaid  main_with_subgraphs.py  mermaid.md  pyproject.toml  signal_subgraph.mermaid  test_json_parsing_manual.py  tut.py  tut2.py
data/: check_and_update_daily_data.py  fetch_daily_indicators.ipynb  fetch_pro_bar_daily.py  hs300_con_code_list_20250901.json  hs300_index_weight.ipynb  hs300_index_weight.py  hs300_index_weight_20250901.csv  read_con_code_example.py
data/20240901-20250901/: hs300_pro_bar_daily.parquet
docs/: SUMMARY.md  add_reducer_refactor.md  checkpointer_architecture.md  clarify_node_usage.md  daily.md  debug_output_source.md  human-in-the-loop.md  json_extraction_refactor.md  pro_bar.md  signal_subgraph_design.md  state_graph_refactor.md  stream_modes_guide.md  指数成分和权重.md  每日指标.md
notebook/: example_stream_usage.py  llm_demo.ipynb  repl.py  test_backtest_subgraph.py  test_clarify_node.py  test_pretty_print.py  test_signal_subgraph.py  tool_test.py
src/: config.py  graph.py  llm.py  state.py  task_logger.py
src/nodes/: clarify_with_user.py
src/subgraphs/: __init__.py
src/subgraphs/backtest/: README.md  __init__.py  graph.py  routes.py  state.py
src/subgraphs/signal/: README.md  clarify.py  (+10 more)
src/tools/: daily_bar.py  daily_ind.py  play.py  utils.py
src/utils/: __init__.py  json_parsing.py  task_logger.py  test_json_parsing.py  test_json_parsing_required_keys.py  test_json_parsing_simple.py
(+10 files in other folders)
