[project]
name = "backtestagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "httpx[socks]>=0.28.1",
    "jqdatasdk>=1.9.7",
    "jupyter>=1.1.1",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.33",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.7",
    "langgraph-cli[inmem]>=0.4.2",
]
